add github pages domain

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="CitPay - Inovação em Pagamentos">
     <meta property="og:description"
         content="Simplifique suas transações com a CIT PAY, a carteira digital que oferece cashback revolucionário, zero taxas em vendas no débito e crédito à vista, e saques rápidos. Descubra como aumentar suas vendas e fidelizar clientes com nossa fintech inovadora.">
-    <meta property="og:image" content="https://citpay.com.br/share_woman.png">
+    <meta property="og:image" content="https://sl1taz.github.io/citpay-site/share_woman.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
     <meta property="twitter:title" content="CitPay - Inovação em Pagamentos">
     <meta property="twitter:description"
         content="Simplifique suas transações com a CIT PAY, a carteira digital que oferece cashback revolucionário, zero taxas em vendas no débito e crédito à vista, e saques rápidos. Descubra como aumentar suas vendas e fidelizar clientes com nossa fintech inovadora.">
-    <meta property="twitter:image" content="https://citpay.com.br/share_woman.png">
+    <meta property="twitter:image" content="https://sl1taz.github.io/citpay-site/share_woman.png">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
